[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = [
    "E501",
]
select = [
    "E",
    "W",
    "F",
    "Q",
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",
]

[tool.isort]
multi_line_output = 9
profile = "black"

[project]
version = "0.4.3+lineaje.1"
maintainers = [
    { name = "Lineaje DepFixer", email = "221268890+Lineaje-DepFixer@users.noreply.github.com" },
]

[project.urls]
Homepage = "https://github.com/lineaje-labs-gos/explosion-weasel"
Repository = "https://github.com/lineaje-labs-gos/explosion-weasel"
Tracker = "https://github.com/lineaje-labs-gos/explosion-weasel/issues"
